Fix display of unknown covers

--- a/static/style.css
+++ b/static/style.css
@@ -415,6 +415,7 @@ header a {
   content: '';
   display: inline-block;
   margin-top: 20px;
+  margin-left: 8px;
   height: 23%;
   width: 75%;
   background-color: #C3534B;
